samples/_failures_safe/1761082911_84f93e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7deb4895.c: In function ‘handle_finished’:
./samples/SAFE/__tmp_7deb4895.c:164:13: error: expected declaration or statement at end of input
  164 |             printf("State machine reset\n");
      |             ^~~~~~
./samples/SAFE/__tmp_7deb4895.c:164:13: error: expected declaration or statement at end of input
